Breadcrumb documentation amends

--- a/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
@@ -2,9 +2,9 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 # Breadcrumb
 
-Breadcrumbs are horizontally arranged text links separated by the “greater than” symbol (>). They are typically described using at least their URL and their name, and typically ending with the current page.
+Breadcrumbs are horizontally arranged text links separated by the “arrow-right.svg” icon. They are typically described using at least their URL and their name, and typically ending with the current page.
 
-The “greater than” symbol (>) seperating the breadcrumb text links you see is an SVG rendered via Data URI. It indicates the level of that page relative to the page links beside it.
+The “arrow-right.svg” icon seperating the breadcrumb text links you see is rendered via background-image Data URIs in CSS. It indicates the level of that page relative to the page links beside it.
 
 <Preview withToolbar>
   <Story height="150px" id="components-breadcrumb--breadcrumb" />
@@ -33,11 +33,9 @@ The “greater than” symbol (>) seperating the breadcrumb text links you see i
 
 ## Breadcrumb - Schema structure
 
-Why add schema? Your web pages have an underlying meaning that people understand when they read the web pages. But search engines have a limited understanding of what is being discussed on those pages. By adding additional tags to the HTML of your web pages—tags that say, "Hey search engine, this information describes this specific movie, or place, or person, or video"—you can help search engines and other applications better understand your content and display it in a useful, relevant way. Microdata (itemscope, itemtype, itemprop) is a set of tags, introduced with HTML5, that allows you to do this.
+Why add schema? Web pages have an underlying meaning that people understand when they read the web pages. But search engines have a limited understanding of what is being discussed on those pages. By adding additional tags to the HTML of your web pages—tags that say, "Hey, this information describes this specific movie, or place, or person, or video"—you can help search engines and other applications better understand your content and display it in a useful, relevant way. Microdata (itemscope, itemtype, itemprop) is a set of tags, introduced with HTML5, that allows you to do this.
 
-The position property is used to reconstruct the order of the items in a Breadcrumb list. The convention is that a breadcrumb list has an itemListOrder of ItemListOrderAscending (lower values listed first), and that the first items in this list correspond to the "top" or beginning of the breadcrumb trail, e.g. with a site or section homepage. The specific values of 'position' are not assigned meaning for a BreadcrumbList, but they should be integers, e.g. beginning with '1' for the first item in the list.
-
-This technique should be used sparingly. Only use meta with content for information that cannot otherwise be marked up. 
+The position property is used to reconstruct the order of the items in a Breadcrumb list. This technique should be used sparingly. Only use meta with content for information that cannot otherwise be marked up. 
 
 For a more thorough read on schema, go to https://schema.org/
 
@@ -63,3 +61,7 @@ For a more thorough read on schema, go to https://schema.org/
   </ol>
 </nav>
 ```
+
+## Accessibility
+
+For accessibility add aria-label="breadcrumb" to the nav element that overlaps the breadcrumb component. And for the li element representing the current page, add aria-current="page".
