--- a/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
@@ -12,9 +12,9 @@ The arrow icon indicates the level of that page relative to the page links besid
 
 ## Breadcrumb Levels
 
-### Uni Level
+### One Level deep
 
-In most cases this would be the home page.
+This would be one level deeper than the home page.
 
 <Preview withToolbar>
   <Story height="100px" id="components-breadcrumb--breadcrumb-uni-level" />
