Breadcrumb doc amend

--- a/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
+++ b/packages/storybook-html/src/components/breadcrumb/breadcrumb.docs.mdx
@@ -12,12 +12,12 @@ The arrow icon indicates the level of that page relative to the page links besid
 
 ## Breadcrumb Levels
 
-### One Level deep
+### One Level
 
 This would be one level deeper than the home page.
 
 <Preview withToolbar>
-  <Story height="100px" id="components-breadcrumb--breadcrumb-uni-level" />
+  <Story height="100px" id="components-breadcrumb--breadcrumb-one-level" />
 </Preview>
 
 ### Multi Level
