--- a/packages/storybook-html/src/components/progression/progression.docs.mdx
+++ b/packages/storybook-html/src/components/progression/progression.docs.mdx
@@ -17,15 +17,15 @@ In the initial instance the component is in it's starting default stage.
 </Preview>
 
 ```html
-  <ul class="progression">
-    <li class="progression__step is-complete">
-        <div class="progression__step-marker">
-            <a class="progression__link" href="#">
-                <span class="progression__step-number">1</span>
-                <span class="progression__step-label">Step 1</span>
+  <ul class="uq-progression">
+    <li class="uq-progression__step is-complete">
+        <div class="uq-progression__step-marker">
+            <a class="uq-progression__link" href="#">
+                <span class="uq-progression__step-number">1</span>
+                <span class="uq-progression__step-label">Step 1</span>
             </a>
         </div>
-        <div class="progression__bar">&nbsp;</div>
+        <div class="uq-progression__bar">&nbsp;</div>
     </li>
     ....
     ....
@@ -41,28 +41,28 @@ An instance when a step is done partly but not completed.
 </Preview>
 
 ```html
-  <ul class="progression">
-    <li class="progression__step is-complete">
-      <div class="progression__step-marker">
-          <a class="progression__link" href="#">
-              <span class="progression__step-number">1</span>
-              <span class="progression__step-label">Step 1</span>
+  <ul class="uq-progression">
+    <li class="uq-progression__step is-complete">
+      <div class="uq-progression__step-marker">
+          <a class="uq-progression__link" href="#">
+              <span class="uq-progression__step-number">1</span>
+              <span class="uq-progression__step-label">Step 1</span>
           </a>
       </div>
-      <div class="progression__bar">&nbsp;</div>
+      <div class="uq-progression__bar">&nbsp;</div>
     </li>
-    <li class="progression__step is-complete">
-      <div class="progression__step-marker">
-          <a class="progression__link" href="#">
-              <span class="progression__step-number">2</span>
-              <span class="progression__step-label">Step 2</span>
+    <li class="uq-progression__step is-complete">
+      <div class="uq-progression__step-marker">
+          <a class="uq-progression__link" href="#">
+              <span class="uq-progression__step-number">2</span>
+              <span class="uq-progression__step-label">Step 2</span>
           </a>
       </div>
-      <div class="progression__bar">
-          <ul class="progression__sub-step">
-              <li class="progression__bar is-complete">&nbsp;</li>
-              <li class="progression__bar is-complete">&nbsp;</li>
-              <li class="progression__bar">&nbsp;</li>
+      <div class="uq-progression__bar">
+          <ul class="uq-progression__sub-step">
+              <li class="uq-progression__bar is-complete">&nbsp;</li>
+              <li class="uq-progression__bar is-complete">&nbsp;</li>
+              <li class="uq-progression__bar">&nbsp;</li>
           </ul>
       </div>
     </li>
@@ -80,54 +80,54 @@ The instance when all steps are done and completed.
 </Preview>
 
 ```html
-  <ul class="progression">
-        <li class="progression__step is-complete">
-            <div class="progression__step-marker">
-                <a class="progression__link" href="#">
-                    <span class="progression__step-number">1</span>
-                    <span class="progression__step-label">Step 1</span>
+  <ul class="uq-progression">
+        <li class="uq-progression__step is-complete">
+            <div class="uq-progression__step-marker">
+                <a class="uq-progression__link" href="#">
+                    <span class="uq-progression__step-number">1</span>
+                    <span class="uq-progression__step-label">Step 1</span>
                 </a>
             </div>
-            <div class="progression__bar">&nbsp;</div>
+            <div class="uq-progression__bar">&nbsp;</div>
         </li>
-        <li class="progression__step is-complete">
-            <div class="progression__step-marker">
-                <a class="progression__link" href="#">
-                    <span class="progression__step-number">2</span>
-                    <span class="progression__step-label">Step 2</span>
+        <li class="uq-progression__step is-complete">
+            <div class="uq-progression__step-marker">
+                <a class="uq-progression__link" href="#">
+                    <span class="uq-progression__step-number">2</span>
+                    <span class="uq-progression__step-label">Step 2</span>
                 </a>
             </div>
-            <div class="progression__bar">
-                <ul class="progression__sub-step">
-                    <li class="progression__bar is-complete">&nbsp;</li>
-                    <li class="progression__bar is-complete">&nbsp;</li>
-                    <li class="progression__bar is-complete">&nbsp;</li>
+            <div class="uq-progression__bar">
+                <ul class="uq-progression__sub-step">
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
                 </ul>
             </div>
         </li>
-        <li class="progression__step is-complete">
-            <div class="progression__step-marker">
-                <a class="progression__link" href="#">
-                    <span class="progression__step-number">3</span>
-                    <span class="progression__step-label">Step 3</span>
+        <li class="uq-progression__step is-complete">
+            <div class="uq-progression__step-marker">
+                <a class="uq-progression__link" href="#">
+                    <span class="uq-progression__step-number">3</span>
+                    <span class="uq-progression__step-label">Step 3</span>
                 </a>
             </div>
-            <div class="progression__bar">
-                <ul class="progression__sub-step">
-                    <li class="progression__bar is-complete">&nbsp;</li>
-                    <li class="progression__bar is-complete">&nbsp;</li>
-                    <li class="progression__bar is-complete">&nbsp;</li>
-                    <li class="progression__bar is-complete">&nbsp;</li>
-                    <li class="progression__bar is-complete">&nbsp;</li>
-                    <li class="progression__bar is-complete">&nbsp;</li>
+            <div class="uq-progression__bar">
+                <ul class="uq-progression__sub-step">
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
+                    <li class="uq-progression__bar is-complete">&nbsp;</li>
                 </ul>
             </div>
         </li>
-        <li class="progression__step is-complete">
-            <div class="progression__step-marker">
-                <a class="progression__link" href="#">
-                    <span class="progression__step-number">4</span>
-                    <span class="progression__step-label">Step 4</span>
+        <li class="uq-progression__step is-complete">
+            <div class="uq-progression__step-marker">
+                <a class="uq-progression__link" href="#">
+                    <span class="uq-progression__step-number">4</span>
+                    <span class="uq-progression__step-label">Step 4</span>
                 </a>
             </div>
         </li>
@@ -139,18 +139,18 @@ The instance when all steps are done and completed.
 If there are sub steps between the main steps, follow the example html code below where the ul element class progression__sub-step and li child(s) with class progression&#95;&#95;bar is added.
 
 ```html
-<ul class="progression">
-    <li class="progression__step is-complete">
-        <div class="progression__step-marker">
-            <a class="progression__link" href="#">
-                <span class="progression__step-number">1</span>
-                <span class="progression__step-label">Step 1</span>
+<ul class="uq-progression">
+    <li class="uq-progression__step is-complete">
+        <div class="uq-progression__step-marker">
+            <a class="uq-progression__link" href="#">
+                <span class="uq-progression__step-number">1</span>
+                <span class="uq-progression__step-label">Step 1</span>
             </a>
         </div>
-        <div class="progression__bar">
-            <ul class="progression__sub-step">
-                <li class="progression__bar is-complete">&nbsp;</li>
-                <li class="progression__bar">&nbsp;</li>
+        <div class="uq-progression__bar">
+            <ul class="uq-progression__sub-step">
+                <li class="uq-progression__bar is-complete">&nbsp;</li>
+                <li class="uq-progression__bar">&nbsp;</li>
                 ....
             </ul>
         </div>
