--- a/packages/storybook-html/src/components/core/space.story.mdx
+++ b/packages/storybook-html/src/components/core/space.story.mdx
@@ -28,84 +28,84 @@ Use the basic spacing scale when building individual components. It includes sma
     <td>0.25</td>
     <td><code>$space-xs</code></td>
     <td>Extra small</td>
-    <td><div class="story-space story-space-xs"></div></td>
+    <td><div class="uqds-space uqds-space-xs"></div></td>
   </tr>
   <tr>
     <td>8</td>
     <td>0.5</td>
     <td><code>$space-sm</code></td>
     <td>Small</td>
-    <td><div class="story-space story-space-sm"></div></td>
+    <td><div class="uqds-space uqds-space-sm"></div></td>
   </tr>
   <tr>
     <td>16</td>
     <td>1</td>
     <td><code>$space</code></td>
     <td>Default space</td>
-    <td><div class="story-space"></div></td>
+    <td><div class="uqds-space"></div></td>
   </tr>
   <tr>
     <td>24</td>
     <td>1.5</td>
     <td><code>$space-md</code></td>
     <td>Medium</td>
-    <td><div class="story-space story-space-md"></div></td>
+    <td><div class="uqds-space uqds-space-md"></div></td>
   </tr>
   <tr>
     <td>32</td>
     <td>2</td>
     <td><code>$space-lg</code></td>
     <td>Large</td>
-    <td><div class="story-space story-space-lg"></div></td>
+    <td><div class="uqds-space uqds-space-lg"></div></td>
   </tr>
   <tr>
     <td>40</td>
     <td>2.5</td>
     <td><code>$space-xl</code></td>
     <td>Extra large</td>
-    <td><div class="story-space story-space-xl"></div></td>
+    <td><div class="uqds-space uqds-space-xl"></div></td>
   </tr>
   <tr>
     <td>48</td>
     <td>3</td>
     <td><code>$space-xxl</code></td>
     <td>2x extra large</td>
-    <td><div class="story-space story-space-xxl"></div></td>
+    <td><div class="uqds-space uqds-space-xxl"></div></td>
   </tr>
   <tr>
     <td>56</td>
     <td>35</td>
     <td><code>$space-xxxl</code></td>
     <td>3x extra large</td>
-    <td><div class="story-space story-space-xxxl"></div></td>
+    <td><div class="uqds-space uqds-space-xxxl"></div></td>
   </tr>
   <tr>
     <td>64</td>
     <td>4</td>
     <td><code>$space-xxxxl</code></td>
     <td>4x extra large</td>
-    <td><div class="story-space story-space-xxxxl"></div></td>
+    <td><div class="uqds-space uqds-space-xxxxl"></div></td>
   </tr>
   <tr>
     <td>72</td>
     <td>4.5</td>
     <td><code>$space-ul</code></td>
     <td>Ultra large</td>
-    <td><div class="story-space story-space-ul"></div></td>
+    <td><div class="uqds-space uqds-space-ul"></div></td>
   </tr>
   <tr>
     <td>80</td>
     <td>5</td>
     <td><code>$space-uul</code></td>
     <td>2x ultra large</td>
-    <td><div class="story-space story-space-uul"></div></td>
+    <td><div class="uqds-space uqds-space-uul"></div></td>
   </tr>
   <tr>
     <td>88</td>
     <td>5.5</td>
     <td><code>$space-uuul</code></td>
     <td>3x ultra large</td>
-    <td><div class="story-space story-space-uuul"></div></td>
+    <td><div class="uqds-space uqds-space-uuul"></div></td>
   </tr>
   </table>
 
@@ -134,42 +134,42 @@ The layout scale is used for arranging components and other UI parts into a full
     <td>16</td>
     <td><code>$space</code></td>
     <td>Default space</td>
-    <td><div class="story-space"></div></td>
+    <td><div class="uqds-space"></div></td>
   </tr>
   <tr>
     <td>24</td>
     <td>1.5</td>
     <td><code>$space-md</code></td>
     <td>Medium</td>
-    <td><div class="story-space story-space-md"></div></td>
+    <td><div class="uqds-space uqds-space-md"></div></td>
   </tr>
   <tr>
     <td>40</td>
     <td>2.5</td>
     <td><code>$space-xl</code></td>
     <td>Extra large</td>
-    <td><div class="story-space story-space-xl"></div></td>
+    <td><div class="uqds-space uqds-space-xl"></div></td>
   </tr>
   <tr>
     <td>64</td>
     <td>4</td>
     <td><code>$space-xxxxl</code></td>
     <td>4x extra large</td>
-    <td><div class="story-space story-space-xxxxl"></div></td>
+    <td><div class="uqds-space uqds-space-xxxxl"></div></td>
   </tr>
   <tr>
     <td>80</td>
     <td>5</td>
     <td><code>$space-uul</code></td>
     <td>2x ultra large</td>
-    <td><div class="story-space story-space-uul"></div></td>
+    <td><div class="uqds-space uqds-space-uul"></div></td>
   </tr>
     <tr>
     <td>160</td>
     <td>10</td>
     <td><code>$space-uuuul</code></td>
     <td>4x ultra large</td>
-    <td><div class="story-space story-space-uuuul"></div></td>
+    <td><div class="uqds-space uqds-space-uuuul"></div></td>
   </tr>
   </table>
 
@@ -192,7 +192,7 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Container</td>
-    <td><div class="story-container story-container-space"><code>$space;</code></div></td>
+    <td><div class="uqds-container uqds-container-space"><code>$space;</code></div></td>
     <td>
       <code>padding:$space;</code>
       <ul>
@@ -203,7 +203,7 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Container size</td>
-    <td><div class="story-container story-container-space-lg"><code>$space-lg;</code></div></td>
+    <td><div class="uqds-container uqds-container-space-lg"><code>$space-lg;</code></div></td>
     <td>
       <code>padding:$space-lg;</code>
       <ul>
@@ -214,7 +214,7 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Compressed</td>
-    <td><div class="story-container story-compressed-space-lg"><code>$space-compressed-lg $space-lg;</code></div></td>
+    <td><div class="uqds-container uqds-compressed-space-lg"><code>$space-compressed-lg $space-lg;</code></div></td>
     <td>
       <code>paddding:$space-compressed-lg $space-lg;</code>
       <ul>
@@ -227,7 +227,7 @@ Applies padding to containers
   </tr>
   <tr>
     <td>Stretched</td>
-    <td><div class="story-container story-stretched-space"><code>$space-stretched $space;</code></div></td>
+    <td><div class="uqds-container uqds-stretched-space"><code>$space-stretched $space;</code></div></td>
     <td>
       <code>paddding:$space-stretched $space;</code>
       <ul>
@@ -255,11 +255,11 @@ Stacks content vertically, applying top margin.
   <tr>
     <td>Stacked</td>
     <td>
-      <div class="story-container">
-        <div class="story-stacked-space"><code>$space;</code></div>
-        <div class="story-stacked-space"><code>$space;</code></div>
-        <div class="story-stacked-space"><code>$space;</code></div>
-        <div class="story-stacked-space"><code>$space;</code></div>
+      <div class="uqds-container">
+        <div class="uqds-stacked-space"><code>$space;</code></div>
+        <div class="uqds-stacked-space"><code>$space;</code></div>
+        <div class="uqds-stacked-space"><code>$space;</code></div>
+        <div class="uqds-stacked-space"><code>$space;</code></div>
       </div>
     </td>
     <td>
@@ -273,11 +273,11 @@ Stacks content vertically, applying top margin.
   <tr>
     <td>Stacked extra small</td>
     <td>
-      <div class="story-container">
-        <div class="story-stacked-space-xs"><code>$space-xs;</code></div>
-        <div class="story-stacked-space-xs"><code>$space-xs;</code></div>
-        <div class="story-stacked-space-xs"><code>$space-xs;</code></div>
-        <div class="story-stacked-space-xs"><code>$space-xs;</code></div>
+      <div class="uqds-container">
+        <div class="uqds-stacked-space-xs"><code>$space-xs;</code></div>
+        <div class="uqds-stacked-space-xs"><code>$space-xs;</code></div>
+        <div class="uqds-stacked-space-xs"><code>$space-xs;</code></div>
+        <div class="uqds-stacked-space-xs"><code>$space-xs;</code></div>
       </div>
     </td>
     <td>
@@ -290,11 +290,11 @@ Stacks content vertically, applying top margin.
   <tr>
     <td>Stacked large</td>
     <td>
-      <div class="story-container">
-        <div class="story-stacked-space-lg"><code>$space-lg;</code></div>
-        <div class="story-stacked-space-lg"><code>$space-lg;</code></div>
-        <div class="story-stacked-space-lg"><code>$space-lg;</code></div>
-        <div class="story-stacked-space-lg"><code>$space-lg;</code></div>
+      <div class="uqds-container">
+        <div class="uqds-stacked-space-lg"><code>$space-lg;</code></div>
+        <div class="uqds-stacked-space-lg"><code>$space-lg;</code></div>
+        <div class="uqds-stacked-space-lg"><code>$space-lg;</code></div>
+        <div class="uqds-stacked-space-lg"><code>$space-lg;</code></div>
       </div>
     </td>
     <td>
@@ -360,84 +360,84 @@ This chart provides a guide to multiples of 8.
     <td>0.25</td>
     <td><code>$space-xs</code></td>
     <td>Extra small</td>
-    <td><div class="story-space story-space-xs"></div></td>
+    <td><div class="uqds-space uqds-space-xs"></div></td>
   </tr>
   <tr>
     <td>8</td>
     <td>0.5</td>
     <td><code>$space-sm</code></td>
     <td>Small</td>
-    <td><div class="story-space story-space-sm"></div></td>
+    <td><div class="uqds-space uqds-space-sm"></div></td>
   </tr>
   <tr>
     <td>16</td>
     <td>1</td>
     <td><code>$space</code></td>
     <td>Default space</td>
-    <td><div class="story-space"></div></td>
+    <td><div class="uqds-space"></div></td>
   </tr>
   <tr>
     <td>24</td>
     <td>1.5</td>
     <td><code>$space-md</code></td>
     <td>Medium</td>
-    <td><div class="story-space story-space-md"></div></td>
+    <td><div class="uqds-space uqds-space-md"></div></td>
   </tr>
   <tr>
     <td>32</td>
     <td>2</td>
     <td><code>$space-lg</code></td>
     <td>Large</td>
-    <td><div class="story-space story-space-lg"></div></td>
+    <td><div class="uqds-space uqds-space-lg"></div></td>
   </tr>
   <tr>
     <td>40</td>
     <td>2.5</td>
     <td><code>$space-xl</code></td>
     <td>Extra large</td>
-    <td><div class="story-space story-space-xl"></div></td>
+    <td><div class="uqds-space uqds-space-xl"></div></td>
   </tr>
   <tr>
     <td>48</td>
     <td>3</td>
     <td><code>$space-xxl</code></td>
     <td>2x extra large</td>
-    <td><div class="story-space story-space-xxl"></div></td>
+    <td><div class="uqds-space uqds-space-xxl"></div></td>
   </tr>
   <tr>
     <td>56</td>
     <td>3.5</td>
     <td><code>$space-xxxl</code></td>
     <td>3x extra large</td>
-    <td><div class="story-space story-space-xxxl"></div></td>
+    <td><div class="uqds-space uqds-space-xxxl"></div></td>
   </tr>
   <tr>
     <td>64</td>
     <td>4</td>
     <td><code>$space-xxxxl</code></td>
     <td>4x extra large</td>
-    <td><div class="story-space story-space-xxxxl"></div></td>
+    <td><div class="uqds-space uqds-space-xxxxl"></div></td>
   </tr>
   <tr>
     <td>72</td>
     <td>4.5</td>
     <td><code>$space-ul</code></td>
     <td>Ultra large</td>
-    <td><div class="story-space story-space-ul"></div></td>
+    <td><div class="uqds-space uqds-space-ul"></div></td>
   </tr>
   <tr>
     <td>80</td>
     <td>5</td>
     <td><code>$space-uul</code></td>
     <td>2x ultra large</td>
-    <td><div class="story-space story-space-uul"></div></td>
+    <td><div class="uqds-space uqds-space-uul"></div></td>
   </tr>
   <tr>
     <td>88</td>
     <td>5.5</td>
     <td><code>$space-uuul</code></td>
     <td>3x ultra large</td>
-    <td><div class="story-space story-space-uuul"></div></td>
+    <td><div class="uqds-space uqds-space-uuul"></div></td>
   </tr>
   <tr>
     <td>96</td>
@@ -500,7 +500,7 @@ This chart provides a guide to multiples of 8.
     <td>10</td>
     <td><code>$space-uuuul</code></td>
     <td>4x ultra large</td>
-    <td><div class="story-space story-space-uuuul"></div></td>
+    <td><div class="uqds-space uqds-space-uuuul"></div></td>
   </tr>
   <tr>
     <td>168</td>
