added inline docs

--- a/packages/storybook-html/src/components/core/space.story.mdx
+++ b/packages/storybook-html/src/components/core/space.story.mdx
@@ -283,7 +283,7 @@ Stacks content vertically, applying top margin.
     <td>
       <code>padding:$space-xs;</code>
       <ul>
-        <li>Increases the density of grouped content</li>
+        <li>Increases the density of stacked content</li>
       </ul>
     </td>
   </tr>
@@ -300,15 +300,76 @@ Stacks content vertically, applying top margin.
     <td>
       <code>padding:$space-xs;</code>
       <ul>
-        <li>decreases the density of grouped content</li>
+        <li>decreases the density of stacked content</li>
       </ul>
     </td>
   </tr>
   </table>
 
 ### Inline spacing
+Arrange objects inline horizontally, applying right margin. 
 
+- wrapping as they flow like text from the left or right.
 
+<table>
+  <tr>
+    <th>Type</th>
+    <th>Example</th>
+    <th>Usage guide</th>
+  </tr>
+  <tr>
+    <td>Inline</td>
+    <td>
+      <div class="uqds-container">
+        <div class="uqds-inline-space"><code>$space;</code></div>
+        <div class="uqds-inline-space"><code>$space;</code></div>
+        <div class="uqds-inline-space"><code>$space;</code></div>
+        <div class="uqds-inline-space"><code>$space;</code></div>
+      </div>
+    </td>
+    <td>
+      <code>padding:$space;</code>
+      <ul>
+        <li>For all content when spacing inline horizontally</li>
+        <li>Apply right margin to content</li>
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>Inline extra small</td>
+    <td>
+      <div class="uqds-container">
+        <div class="uqds-inline-space-xs"><code>$space-xs;</code></div>
+        <div class="uqds-inline-space-xs"><code>$space-xs;</code></div>
+        <div class="uqds-inline-space-xs"><code>$space-xs;</code></div>
+        <div class="uqds-inline-space-xs"><code>$space-xs;</code></div>
+      </div>
+    </td>
+    <td>
+      <code>padding:$space-xs;</code>
+      <ul>
+        <li>Increases the density of inline content</li>
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>Inline large</td>
+    <td>
+      <div class="uqds-container">
+        <div class="uqds-inline-space-lg"><code>$space-lg;</code></div>
+        <div class="uqds-inline-space-lg"><code>$space-lg;</code></div>
+        <div class="uqds-inline-space-lg"><code>$space-lg;</code></div>
+        <div class="uqds-inline-space-lg"><code>$space-lg;</code></div>
+      </div>
+    </td>
+    <td>
+      <code>padding:$space-xs;</code>
+      <ul>
+        <li>decreases the density of inline content</li>
+      </ul>
+    </td>
+  </tr>
+  </table>
 
 
 ## Chart of Spacing scale
