Table component Initial build

--- a/packages/storybook-html/src/components/body/body-elements.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-elements.docs.mdx
@@ -32,5 +32,6 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 Coming soon
 
 ## Tables
-
-Coming soon
+<Preview withToolbar>
+  <Story height="400px" id="base-body-elements--table" />
+</Preview>
