storybook-html: Preview to Canvas, adjust for inlined stories by default

--- a/packages/storybook-html/src/components/body/body-elements.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-elements.docs.mdx
@@ -1,31 +1,31 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 # Body elements
 
 ## Text block
-<Preview withToolbar>
-  <Story height="500px" id="base-body-elements--text-block" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="base-body-elements--text-block" />
+</Canvas>
 
 ## Unordered list
-<Preview withToolbar>
-  <Story height="300px" id="base-body-elements--unordered-list" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="base-body-elements--unordered-list" />
+</Canvas>
 
 ## Ordered list
-<Preview withToolbar>
-  <Story height="300px" id="base-body-elements--ordered-list" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="base-body-elements--ordered-list" />
+</Canvas>
 
 ## Definition list
-<Preview withToolbar>
-  <Story height="400px" id="base-body-elements--definition-list" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="base-body-elements--definition-list" />
+</Canvas>
 
 ## Horizontal rule
-<Preview withToolbar>
-  <Story height="300px" id="base-body-elements--horizontal-rule" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="base-body-elements--horizontal-rule" />
+</Canvas>
 
 ## Video
 
