--- a/packages/storybook-html/src/components/body/body-utilities.docs.mdx
+++ b/packages/storybook-html/src/components/body/body-utilities.docs.mdx
@@ -1,40 +1,24 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 # Body utility classes
 
 ## Text colour
-
-<Preview withToolbar>
-  <Story height="200px" id="base-body-utilities--text-color-utils" />
-</Preview>
+<Story id="base-body-utilities--text-color-utils" />
 
 ## Text size
-
-<Preview withToolbar>
-  <Story height="200px" id="base-body-utilities--text-size-utils" />
-</Preview>
+<Story id="base-body-utilities--text-size-utils" />
 
 ## Text weight
-
-<Preview withToolbar>
-  <Story height="100px" id="base-body-utilities--text-weight-utils" />
-</Preview>
+<Story id="base-body-utilities--text-weight-utils" />
 
 ## Text alignment
-<Preview withToolbar>
-  <Story height="400px" id="base-body-utilities--text-align-utils" />
-</Preview>
+<Story id="base-body-utilities--text-align-utils" />
 
 ## Text prettiers
-<Preview withToolbar>
-  <Story height="200px" id="base-body-utilities--text-pretty-utils" />
-</Preview>
+<Story id="base-body-utilities--text-pretty-utils" />
 
 ## Background colour
-
-<Preview withToolbar>
-  <Story height="200px" id="base-body-utilities--background-colour-utils" />
-</Preview>
+<Story id="base-body-utilities--background-colour-utils" />
 
 ## Margin adjustment
 
