--- a/packages/storybook-html/src/components/core/core.docs.mdx
+++ b/packages/storybook-html/src/components/core/core.docs.mdx
@@ -1,20 +1,16 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 # Core
 
 ## Colours
 
-<Preview>
-  <Story height="400px" id="core-core--colours" />
-</Preview>
+<Story id="core-core--colours" />
 
 ## Fonts
 
 <strong>Required for all design system components.</strong>
 
-<Preview>
-  <Story height="300px" id="core-core--fonts" />
-</Preview>
+<Story id="core-core--fonts" />
 
 Copy the HTML or CSS lines below and paste into your project to load design system fonts.
 
