--- a/packages/storybook-html/src/components/form/examples/password-reset.docs.mdx
+++ b/packages/storybook-html/src/components/form/examples/password-reset.docs.mdx
@@ -1,7 +1,7 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 # Choose password
 
-<Preview>
-  <Story height="700px" id="forms-working-examples--password-form" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="forms-working-examples--password-form" />
+</Canvas>
