--- a/packages/storybook-html/src/components/form/form-validation.story.mdx
+++ b/packages/storybook-html/src/components/form/form-validation.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Forms/Form validation" />
 
@@ -43,9 +43,7 @@ validation.
 Display an error summary _above/before_ the form when the user submits the form
 (_on submit_).
 
-<Preview withToolbar>
-  <Story height="180px" id="forms-form-errors--error-summary" />
-</Preview>
+<Story id="forms-form-errors--error-summary" />
 
 #### What should go into an error summary?
 
@@ -57,9 +55,7 @@ Display an error summary _above/before_ the form when the user submits the form
 The following example shows insertion of errors when the user tries to submit
 the form without data.
 
-<Preview withToolbar>
-  <Story height="800px" id="forms-form-errors--kitchen-sink" />
-</Preview>
+<Story id="forms-form-errors--kitchen-sink" />
 
 ---
 
