--- a/packages/storybook-html/src/components/page-header/page-header.docs.mdx
+++ b/packages/storybook-html/src/components/page-header/page-header.docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Components/Page header/All" />
 
@@ -7,9 +7,9 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 The Page header component is used to display the page title or the breadcrumbs or a combination of both. 
 The default background color is set to light grey to distinguish it from the page contents.
 
-<Preview withToolbar>
-  <Story height="300px" id="components-page-header--page-header" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-page-header--page-header" />
+</Canvas>
 
 ### Page header default
 
