--- a/packages/storybook-html/src/components/pagination/pagination.docs.mdx
+++ b/packages/storybook-html/src/components/pagination/pagination.docs.mdx
@@ -1,18 +1,18 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Components/Pagination/Pagination states" />
 
 ### Pagination All
 
-<Preview withToolbar>
-  <Story height="180px" id="components-pagination--pagination" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-pagination--pagination" />
+</Canvas>
 
 ### Pagination First
 
-<Preview withToolbar>
-  <Story height="180px" id="components-pagination--pagination-first" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-pagination--pagination-first" />
+</Canvas>
 
 ```html
 <ul class="pagination">
@@ -31,9 +31,9 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 ### Pagination Middle
 
-<Preview withToolbar>
-  <Story height="180px" id="components-pagination--pagination-middle" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-pagination--pagination-middle" />
+</Canvas>
 
 ```html
 <ul class="pagination">
@@ -55,9 +55,9 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 ### Pagination Last
 
-<Preview withToolbar>
-  <Story height="180px" id="components-pagination--pagination-last" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-pagination--pagination-last" />
+</Canvas>
 
 ```html
 <ul class="pagination">
