--- a/packages/storybook-html/src/components/pagination/pagination.story.mdx
+++ b/packages/storybook-html/src/components/pagination/pagination.story.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Components/Pagination/Pagination states" />
 
@@ -13,21 +13,21 @@ If the component is displaying the last page, the links 'last' and 'next' are re
 
 ### Pagination First
 
-<Preview withToolbar>
-  <Story height="180px" id="components-pagination--pagination-first" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-pagination--pagination-first" />
+</Canvas>
 
 ### Pagination Middle
 
-<Preview withToolbar>
-  <Story height="180px" id="components-pagination--pagination-middle" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-pagination--pagination-middle" />
+</Canvas>
 
 ### Pagination Last
 
-<Preview withToolbar>
-  <Story height="180px" id="components-pagination--pagination-last" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-pagination--pagination-last" />
+</Canvas>
 
 
 #### The table below list's the classname's of the pagination component and what it does.
