--- a/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
+++ b/packages/storybook-html/src/components/previous-next/previous-next.docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 # Previous Next
 
@@ -14,9 +14,9 @@ They are aligned to the sides of the page or in some instances to the sides of t
 
 An instance when only the next button is visible
 
-<Preview withToolbar>
-  <Story height="350px" id="components-previous-next--previous-next-first" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-previous-next--previous-next-first" />
+</Canvas>
 
 ```html
   <div class="uq-previous-next">
@@ -34,9 +34,9 @@ An instance when only the next button is visible
 
 An instance when both the previous and next buttons are visible
 
-<Preview withToolbar>
-  <Story height="350px" id="components-previous-next--previous-next" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-previous-next--previous-next" />
+</Canvas>
 
 ```html
 <!-- Previous and Next buttons are visible -->  
@@ -55,9 +55,9 @@ An instance when both the previous and next buttons are visible
 
 An instance when only the previous button is visible
 
-<Preview withToolbar>
-  <Story height="350px" id="components-previous-next--previous-next-last" />
-</Preview>
+<Canvas withSource="none">
+  <Story id="components-previous-next--previous-next-last" />
+</Canvas>
 
 ```html
   <div class="uq-previous-next">
