--- a/packages/storybook-html/src/components/site-header/site-header.docs.mdx
+++ b/packages/storybook-html/src/components/site-header/site-header.docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 # Site header
 
@@ -10,9 +10,9 @@ The main navigation component is designed to work closely with the header, site 
 
 A simple one level menu list
 
-<Preview withToolbar>
+<Canvas withSource="none">
   <Story height="350px" id="components-site-header--site-header" />
-</Preview>
+</Canvas>
 
 ## with Dropdown
 
