--- a/packages/storybook-html/src/components/core/space.story.mdx
+++ b/packages/storybook-html/src/components/core/space.story.mdx
@@ -6,7 +6,7 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
 ## Basic content and component spacing
 
-Use the basic spacing scale when building individual components. It includes small increments needed to create appropriate spatial relationships for detail-level designs.
+Use this basic spacing scale when building individual components. It includes small increments needed to create appropriate spatial relationships for detail-level designs.
 
 <table>
   <tr>
@@ -112,7 +112,7 @@ Use the basic spacing scale when building individual components. It includes sma
 
 ## Layout spacing
 
-The layout scale is used for arranging components and other UI parts into a full page layout. It has larger increments that are used to control the density of a design. Use the smaller layout tokens to create more dense compositions and direct relationships. Use the larger tokens to increase the amount of white space and to disassociate sections.
+Use this layout scale for arranging components and other UI parts into a full page layout. It has larger increments that are used to control the density of a design. Use the smaller layout tokens to create more dense compositions and direct relationships. Use the larger tokens to increase the amount of white space and to disassociate sections.
 
 <table>
   <tr>
@@ -244,7 +244,7 @@ Applies padding to containers
 Stacks content vertically, applying top margin. 
 
 - allows us to target the objects space through the css cascade, and the space to the next object. 
-- use For all stacked content. So for example panels, form fields and anything else that is stacked vertically.
+- use for all stacked content. So for example panels, form fields and anything else that is stacked vertically.
 
 <table>
   <tr>
