--- a/packages/storybook-html/src/components/core/core.docs.mdx
+++ b/packages/storybook-html/src/components/core/core.docs.mdx
@@ -18,12 +18,12 @@ Copy the HTML or CSS lines below and paste into your project to load design syst
 ```html
 <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v6/fonts/Roboto/roboto.css" />
 <link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v9/fonts/Merriweather/merriweather.css" />
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" />
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v12/fonts/Montserrat/montserrat.css" />
 ```
 
 ### CSS
 ```css
 @import url('https://static.uq.net.au/v6/fonts/Roboto/roboto.css');
 @import url('https://static.uq.net.au/v9/fonts/Merriweather/merriweather.css');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://static.uq.net.au/v12/fonts/Montserrat/montserrat.css');
 ```
