--- a/packages/storybook-html/src/components/table/table.docs.mdx
+++ b/packages/storybook-html/src/components/table/table.docs.mdx
@@ -1,4 +1,240 @@
-<!--
-Row header:  <th class="uq-table__header" scope="row">
-Column header:  <th class="uq-table__header" scope="col">
--->
+import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
+
+# Table
+
+## Overview
+
+The Table component helps in displaying tabular data. The data should be responsive on different viewport devices and accessible to assistive technologies like screen readers.
+
+## Responsiveness
+
+Shown below are 3 approaches in acheiving responsive behaviour in table components.
+
+### a) Table Scroll
+
+This is the default approach and needs to be implimented when there is lots of data. In this approach the component table is scrolled horizontally as required when the table width is greater than the viewport width helping the user to view the data even on smaller viewport devices. 
+
+To enable scroll feature, the table is wrapped by a div with class `uq-table__wrapper`.
+
+A shadow feature is added on either side of the table when it overflows the container depending on the scroll position. It serves to indicate the user that there is more data to the left or right to be scrolled.
+
+<Preview withToolbar>
+  <Story height="800px" id="components-table--table" />
+</Preview>
+
+```html
+<h2>Table - Basic tags with minimal classes</h2>
+<div class="uq-table__wrapper">
+    <table class="uq-table">
+        <caption>Types of food and ratings</caption>
+        <thead>
+            <tr>
+                <th scope="col">Type of Food</th>
+                <th scope="col">Calories</th>
+                <th scope="col">Tasty Factor</th>
+                <th scope="col">Average Price</th>
+                <th scope="col">Rarity</th>
+                <th scope="col">Average Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Slice of Pizza</td>
+                <td>450</td>
+                <td>95%</td>
+                <td>$5.00</td>
+                <td>Common</td>
+                <td>8/10</td>
+            </tr>
+            <tr>
+                <td>Hamburger</td>
+                <td>350</td>
+                <td>87%</td>
+                <td>$3.50</td>
+                <td>Common</td>
+                <td>7.5/10</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
+
+
+<h2>Table - Basic tags with classes</h2>
+<div class="uq-table__wrapper">
+  <table class="uq-table">
+      <caption class="uq-table__caption">Types of food and ratings</caption>
+      <thead class="uq-table__head">
+          <tr class="uq-table__row">
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Type of Food</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Calories</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Tasty Factor</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Average Price</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Rarity</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Average Rating</th>
+          </tr>
+      </thead>
+      <tbody class="uq-table__body">
+          <tr class="uq-table__row">
+              <td class="uq-table__cell">Slice of Pizza</td>
+              <td class="uq-table__cell uq-table__cell--align-right">450</td>
+              <td class="uq-table__cell uq-table__cell--align-right">95%</td>
+              <td class="uq-table__cell uq-table__cell--align-right">$5.00</td>
+              <td class="uq-table__cell">Common</td>
+              <td class="uq-table__cell uq-table__cell--align-right">8/10</td>
+          </tr>
+          <tr class="uq-table__row">
+            <td class="uq-table__cell">Hamburger</td>
+            <td class="uq-table__cell uq-table__cell--align-right">350</td>
+            <td class="uq-table__cell uq-table__cell--align-right">87%</td>
+            <td class="uq-table__cell uq-table__cell--align-right">$3.50</td>
+            <td>Common</td>
+            <td class="uq-table__cell uq-table__cell--align-right">7.5/10</td>
+          </tr>
+      </tbody>
+  </table>
+</div>
+```
+
+### b) Table Flex
+
+In this responsive approach the table is displayed as flex below a certain breakpoint so the data is stacked on smaller viewports. 
+The technique used here to responsively display data is via data attributes.
+
+<Preview withToolbar>
+  <Story height="350px" id="components-table--tableflex" />
+</Preview>
+
+```html
+  <h2>Table - Flex</h2>
+    <table class="uq-table uq-table--flex">
+        <caption>Types of food and ratings</caption>
+        <thead>
+            <tr>
+                <th scope="col">Type of Food</th>
+                <th scope="col">Calories</th>
+                <th scope="col">Tasty Factor</th>
+                <th scope="col">Average Price</th>
+                <th scope="col">Rarity</th>
+                <th scope="col">Average Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td data-title="Type of Food">Slice of Pizza</td>
+                <td data-title="Calories">450</td>
+                <td data-title="Tasty Factor">95%</td>
+                <td data-title="Average Price">$5.00</td>
+                <td data-title="Rarity">Common</td>
+                <td data-title="Average Rating">8/10</td>
+            </tr>
+            <tr>
+                <td data-title="Type of Food">Hamburger</td>
+                <td data-title="Calories">350</td>
+                <td data-title="Tasty Factor">87%</td>
+                <td data-title="Average Price">$3.50</td>
+                <td data-title="Rarity">Common</td>
+                <td data-title="Average Rating">7.5/10</td>
+            </tr>
+        </tbody>
+    </table>
+```
+
+### c) Table Grid
+
+In this responsive approach, the component table is displayed as a grid to display data on smaller viewports. 
+
+<Preview withToolbar>
+  <Story height="350px" id="components-table--tablegrid" />
+</Preview>
+
+```html
+  <h2>Table - Grid</h2>
+    <table class="uq-table uq-table--grid">
+        <caption>Types of food and ratings</caption>
+        <thead>
+            <tr>
+                <th scope="col">Type of Food</th>
+                <th scope="col">Calories</th>
+                <th scope="col">Tasty Factor</th>
+                <th scope="col">Average Price</th>
+                <th scope="col">Rarity</th>
+                <th scope="col">Average Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Slice of Pizza</td>
+                <td>450</td>
+                <td>95%</td>
+                <td>$5.00</td>
+                <td>Common</td>
+                <td>8/10</td>
+            </tr>
+            <tr>
+                <td>Hamburger</td>
+                <td>350</td>
+                <td>87%</td>
+                <td>$3.50</td>
+                <td>Common</td>
+                <td>7.5/10</td>
+            </tr>
+        </tbody>
+    </table>
+```
+
+## Accessibility
+
+Accessibility in tables can be acheived to an extend by following some or part of the steps below depending on the table data structure.
+
+1. Keep the table structure simple. If needed, split the data to keep it simple or else the user using assistive technologies like screen readers will find it hard to interpret data relationships.
+2. Use right semantical html markups for tables wherever possible. (Example, `<table>`, `<thead>`, `<tfoot>`, `<tbody>`, `<th>`, `<td>`)
+3. Use `<caption>` tag which defines a table caption. The `<caption>` tag must be inserted immediately after the `<table>` tag. Tip: By default, a table caption will be center-aligned above a table.
+4. Use `<th>` instead of `<td>` for header cells in tables. Usually they are the first row or first column or both in a table.
+5. For complex tables, associations may be needed using scope attribute with value as `col`,`row`,`colgroup`,`rowgroup`. See example below.
+```html
+<table>
+  <tr>
+    <th scope="col">Name</th>
+    <th scope="col">Email</th>
+    <th scope="col">Phone</th>
+    <th scope="col">Address</th>
+  </tr>
+  <tr>
+    <td>John Doe</td>
+    <td>someone@example.com</td>
+    <td>+45342323</td>
+    <td>Rosevn 56,4300 Sandnes,Norway</td>
+  </tr>
+</table>
+```
+
+`col` - specifies that the cell is a header for a column.  
+`row` - specifies that the cell is a header for a row.  
+`colgroup` - specifies that the cell is a header for a group of columns.  
+`rowgroup` - specifies that the cell is a header for a group of rows.  
+
+6. In some other cases, associations may be needed using id and headers attributes.
+```html
+<table>
+  <tr>
+    <th scope="col" id="name">Name</th>
+    <th scope="col" id="email">Email</th>
+    <th scope="col" id="phone">Phone</th>
+    <th scope="col" id="addr">Address</th>
+  </tr>
+  <tr>
+    <td headers="name">John Doe</td>
+    <td headers="email">someone@example.com</td>
+    <td headers="phone">+45342323</td>
+    <td headers="addr">Rosevn 56,4300 Sandnes,Norway</td>
+  </tr>
+</table>
+```
+7. Though `<thead>`, `<tfoot>`, `<tbody>` makes no difference with assistive technologies like screen readers, they are useful when printing long tables that run over the next page. In such instances, the `<thead>`, `<tfoot>` gets repeated on the next printed page that gives the data context.
+
+
+## Breakpoints
+
+The breakpoint for flex and grid tables are less than 640px.
